2011-11-03  Jeffrey Cunningham <jeffrey@jkcunningham.com>
	
	* added doc strings to most exported functions.

2011-10-11  Yoshinori Tahara  <read.eval.print@gmail.com>

	* fix error. (dt:month+ (dt:make-date 2011 11 1) 1)
	thanks cage.
