@@ -64,5 +64,6 @@
            #:|yyyymmddThhmmssZ|
            #:http-date
 	   #:rfc-2822
+           #:*default-timezone*
            ))
 
